3 August 2011: Wouter
	- silence 'Broken pipe' messages in log (visible with verbosity 2).

2 August 2011: Wouter
	- fix compile on Ubuntu 11.04 systems, detects cc system header issue.

1 August 2011: Wouter
	- fix checkconf test for remote control options.
	- fix warning on Ubuntu 10.04, fix autoconf 2.68 warning on NetBSD.

29 July 2011: Wouter
	- zones with no zonefile are not written to text (assumes you can
	  get AXFR and IXFR for the contents).  They are stored in nsd.db.
	- test for repattern.

28 July 2011: Wouter
	- nsd-control repattern reads TSIG and pattern configuration.

25 July 2011: Wouter
	- fixed tests for removed tools from nsd, with replacements.
	  replaced nsd-patch with nsd-control write. replaced nsd-notify with
	  ldns-notify. replaced nsd-xfer with dig -t axfr.
	- fix for xfrd restart if crashed. xfrd knows if a reload is
	  active at that time so it cannot start another one at the same
	  time.  New shortsoa track for start that does not use taskdb
	  in use by reload.  taskdb in use by crashed xfrd is recreated,
	  in case it is corrupt.  This keeps the nsd.db intact, keeps
	  reload running with its updated and keeps service from the
	  server processes active.

22 July 2011: Wouter
	- added contrib/nsd.init (nsdc.sh that only does start,stop).
	- removed nsdc.sh, nsd-xfer, nsd-notify, nsd-patch.
	  for rc.d: contrib/nsd.init, or platform specific init script.
	  nsd-xfer: see nsd-control transfer, or force_transfer.
	  nsd-notify: see nsd-control notify.
	  nsd-patch: see (cron job to) nsd-control write.

21 July 2011: Wouter
	- nsd-control notify, transfer and force_transfer.
	- fix for bug in write and reload zone option.
	- nsd-control zonestatus command.

20 July 2011: Wouter
	- reload can be given optional zone argument.
	- nsd-control reopen_logfile.
	- nsd-control write changed zonefiles.

18 July 2011: Wouter
	- Fix xfrd activation of zones to not break running zone transfers.

13 July 2011: Wouter